# dsait-4065-conversational-agents

./: .env.example  .gitignore  README.md  main.py  main_copy.py  pyproject.toml
notebooks/: factors.csv  process_forms.ipynb  requirements.txt  survey_responses.csv  survey_responses_2.csv  survey_responses_2_corrected.csv  survey_results_cleaned.csv
notebooks/source/: questions.txt
src/agent/asr/: asr.py
src/agent/controller/: controller.py
src/agent/emotion/: emotion.py  linguistic.py  video.py
src/agent/generator/: generator.py  mistral_api  stability_api  test_openai.py
src/agent/memory/: memory.py  retrieval.py  schema.py
src/agent/text2speech/: text2speech.py
src/ca/: __init__.py
src/gui/: fashionAssistantGUI.py
test/integration/: controller.py  test_controller.py
