[project]
name = "ca"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Emiel", email = "emiel.witting@gmail.com" }
]
dependencies = [
    "pytest>=8.3.5",
    "transformers>=4.49.0",
    "whisper>=1.1.10",
    "torch==2.6.0+cu118",
    "ollama>=0.4.7",
    "mistralai>=1.5.1",
    "sounddevice>=0.5.1",
    "wavio>=0.0.9",
    "pillow>=11.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ca"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
