[project]
name = "dsait-4065-conversational-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.5.1",
    "ollama>=0.4.7",
    "openai-whisper>=20240930",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "sounddevice>=0.5.1",
    "wavio>=0.0.9",
]
